# tsc-archite

./: .env.example  .gitignore  README.md  clean_start.sh  export_convo.py  extracted_v27_transcript.txt  extracted_v28_transcript.txt  extracted_v29_transcript.txt  list_actions.py  production_recommendation.json  pyproject.toml  retrieve_sota_convo.py  retrieve_v27_logs.py  retrieve_v28_logs.py  retrieve_v29_logs.py  run_oasis.sh  run_production_pipeline.py  test_30_agent_end_to_end_sim.py  test_conversations.py  test_mock_sim.py  test_sim_stability.py  tsc_dev.db
docs/: architecture_overview.md  gate_analysis_deep_dive.md  implementation_plan.md  persona_generation_deep_dive.md  task.md  walkthrough.md
production_data/: company_context.json  customer_interviews.txt  feature_proposal.json  support_tickets.txt
simulation_results/: e2e_sim_133511_conversation.md  sota_convergent_final_transcript.md  sota_mock_gemini_transcript.md
simulation_results/sota_convergent_v1/: actions.jsonl  progress.json
simulation_results/sota_convergent_v18/: actions.jsonl  progress.json  sim_analysis_sota_convergent_v18.md  sota_convergent_v18.sqlite
tests/: smoke_test_belief_vectors.py  test_ag2_debate.py  test_boardroom_engine.py  test_persona_market_models.py
tsc/: __init__.py  cli.py  config.py
tsc/api/: persona_api.py
tsc/caching/: lru_cache.py
tsc/config/: __init__.py  pipeline_config.py
tsc/db/: cache.py  connection.py  models.py  repositories.py
tsc/gates/: __init__.py  base.py  implementations.py  market_fit_gate.py  red_team_gate.py
tsc/layers/: __init__.py  boardroom_qa.py  layer1_ingestor.py  layer2_graph.py  (+8 more)
(+87 files in other folders)
