[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tsc"
version = "2.0.0"
description = "Technology-Stakeholder-Consensus: Production-ready feature evaluation pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",

    # LLM Providers
    "anthropic>=0.30",
    "openai>=1.30",
    "httpx>=0.27",

    # NLP (local, sustainable)
    "sentence-transformers>=2.2",
    "spacy>=3.7",
    "transformers>=4.35",
    "torch>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",

    # Memory (Zep Cloud)
    "zep-cloud>=2.0",

    # Data processing
    "pdfplumber>=0.10",
    "python-docx>=1.0",
    "pyDOE2>=0.4",
    "scipy>=1.10",
    "networkx>=3.0",
    "mesa>=3.0",

    # Web UI
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",

    # Multi-Agent Debate
    "ag2>=0.2",
    "tavily-python>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]

[project.scripts]
tsc = "tsc.cli:main"

[tool.setuptools.packages.find]
include = ["tsc*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
